# agentlab

./: .gitignore  GUI_V2_UX_SPEC.md  INVARIANTS.md  KNOB_SYSTEM_PROTOCOL.md  LICENSE  Makefile  PATCH_SPEC.md  README.md  RUST_IMPLEMENTATION_SPEC.md  TESTS.md  WORKLOAD_PROTOCOL.md  implementation_spec.md  plan.md  pyproject.toml  requirements.in  requirements.txt  run_20260223_013940_patch_plan.md
.metarepo/: client.json
adapters/: README.md  __init__.py
bench/: __init__.py  cli.py  config.py  paths.py
demos/: README.md  agentlab_demo_grader.js  agentlab_demo_harness.js  experiment.yaml  swebench_mini_tasks.jsonl
docs/: AGENTLAB_ONBOARDING.md  AGENT_DRIVEN_EXPERIMENTATION_SPEC.md  ARCHITECTURE.md  ASYNC_DOCKER_CUTOVER_PROPOSAL.md  BENCHMARK_ADAPTER_PROTOCOL.md  BENCH_AGENTLAB_INTEGRATION.md  BENCH_V0_TASK_CONTAINER_MIGRATION.md  CONCEPT_CONSOLIDATION_AND_BUILD_MODEL.md  CONTAINER_RUNTIME_CONTRACT_PATCH.md  DATASET_AND_STATE_MOUNT_PATCH.md  DESIGN_PRINCIPLES.md  DOMAIN_MODEL.md  DUCKDB_VIEWS_DESIGN.md  ENGINE_PREFLIGHT_RUNTIME_TRIAGE.md  EXPERIMENTS_RELIABILITY_HARD_GATES_PLAN.md  FILESYSTEM_TASK_BOUNDARY_WIP.md  GUI_MVP_PLAN.md  HARBOR_FIRST_CLASS_INTEGRATION_SPEC.md  HARBOR_PHASE1_RUNBOOK.md  HARBOR_PHASE2_RUNBOOK.md  (+55 more)
rust/: Cargo.toml  README.md  RUNNER_SQLITE_HARD_CUTOVER_PATCH_SPEC.md
rust/.cargo/: config.toml
rust/agentlab/crates/lab-core/src/: lib.rs
rust/agentlab/crates/lab-hooks/: Cargo.toml
rust/agentlab/crates/lab-provenance/src/: lib.rs
rust/agentlab/crates/lab-runner/: Cargo.toml
rust/agentlab/crates/lab-runner/src/: lib.rs
rust/agentlab/crates/lab-schemas/: Cargo.toml
rust/agentlab/crates/lab-schemas/src/: lib.rs
rust/crates/lab-analysis/: Cargo.toml
rust/crates/lab-analysis/src/: lib.rs
rust/crates/lab-analysis/views/: ab_test.sql  multi_variant.sql  parameter_sweep.sql  regression.sql
rust/crates/lab-cli/: Cargo.toml
rust/crates/lab-cli/src/: main.rs  tui.rs
rust/crates/lab-core/: Cargo.toml
rust/crates/lab-core/src/: lib.rs
rust/crates/lab-hooks/src/: lib.rs
rust/crates/lab-otel/: Cargo.toml
rust/crates/lab-otel/src/: lib.rs
rust/crates/lab-provenance/: Cargo.toml
rust/crates/lab-runner/: Cargo.toml
rust/crates/lab-runner/legacy/: README.md
rust/crates/lab-runner/legacy/src/: core.rs  io.rs  lifecycle.rs  runner.rs  types.rs  validations.rs
rust/crates/lab-runner/legacy/src/persistence/: run_sink.rs  sqlite_store.rs
rust/crates/lab-runner/src/: agentlab_entrypoint.sh  config.rs  core.rs  io.rs  lib.rs  lifecycle.rs  model.rs  runner.rs  sink.rs  tests.rs  types.rs  util.rs  validations.rs
rust/crates/lab-runner/src/backend/: docker.rs  mod.rs
rust/crates/lab-runner/src/experiment/: commit.rs  control.rs  lease.rs  mod.rs  preflight.rs  runner.rs  runtime.rs  state.rs
rust/crates/lab-runner/src/package/: authoring.rs  compile.rs  mod.rs  sealed.rs  staging.rs  validate.rs
rust/crates/lab-runner/src/persistence/: journal.rs  json_rows.rs  mod.rs  rows.rs  schema_v2.sql  sqlite_store.rs  store.rs
rust/crates/lab-runner/src/run/: mod.rs
rust/crates/lab-runner/src/trial/: artifacts.rs  env.rs  events.rs  execution.rs  grade.rs  layout.rs  mod.rs  preflight.rs  prepare.rs  schedule.rs  spec.rs  state.rs  workspace.rs
rust/crates/lab-runner/testdata/: p0_benchmark_adaptation_trial_shape.json  p2e_determinism_fixture.json
rust/crates/lab-schemas/: build.rs
rust/crates/lab-schemas/src/: lib.rs
rust/docs/: cli.md
(+318 files in other folders)
