[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlab"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
gui = [
  "streamlit>=1.33",
]

[project.scripts]
lab = "agentlab_cli.cli:main"
lab-gui = "agentlab_gui.launcher:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
