[workspace]
members = [
  "crates/lab-core",
  "crates/lab-schemas",
  "crates/lab-hooks",
  "crates/lab-provenance",
  "crates/lab-otel",
  "crates/lab-runner",
  "crates/lab-cli", "crates/lab-analysis",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
bytes = "1"
flate2 = "1"
futures-util = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
percent-encoding = "2"
sha2 = "0.10"
hex = "0.4"
jsonschema = "0.17"
include_dir = "0.7"
tar = "0.4"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "time"] }
walkdir = "2"
zip = "0.6"
base64 = "0.21.7"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tiny_http = "0.12"
duckdb = { version = "0.10", features = ["bundled"] }
rusqlite = { version = "0.33", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3"

[patch.crates-io]
libduckdb-sys = { path = "vendor/libduckdb-sys-0.10.2" }
