[package]
name = "lab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
lab-schemas = { path = "../lab-schemas" }
lab-hooks = { path = "../lab-hooks" }
lab-runner = { path = "../lab-runner" }
lab-provenance = { path = "../lab-provenance" }
lab-analysis = { path = "../lab-analysis" }
libc = "0.2"
